# Spectral-Privacy

./: .env.example  .eslintignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .secrets.baseline  CONTRIBUTING.md  Cargo.toml  README.md  architecture.md  claude.md  deny.toml  eslint.config.js  package-lock.json  package.json  patterns.md  setup.sh  sonar-project.properties  tailwind.config.ts  vite.config.ts
.claude/agents/: patterns-enforcer.md
.claude/skills/: README.md  spectral-accessibility.md  spectral-broker-definition.md  spectral-broker-research.md  spectral-email-safety.md  spectral-infosec.md  spectral-legal.md  spectral-patterns.md  spectral-pentester.md  spectral-pm.md
.github/: CODE_REVIEW_CHECKLIST.md
.github/workflows/: ci.yml
.semgrep/: pattern-enforcement.yaml  spectral-rules.yaml
architecture/: 00-overview.md  01-vision.md  02-high-level-architecture.md  03-core-modules.md  04-pii-discovery.md  05-network-telemetry.md  06-removal-verification.md  07-mail-communication.md  08-permissions.md  09-security.md  10-reporting-dashboard.md  11-llm-integration.md  12-frontend.md  13-project-structure.md  14-database-schema.md  15-dependencies.md  16-broker-maintenance.md  17-roadmap.md  18-license.md  19-open-questions.md  20-onboarding.md  21-geolocation-jurisdiction.md  22-proactive-scanning.md  23-commercial-relationships.md  24-resolved-questions.md  README.md
broker-definitions/: README.md  schema.toml
broker-definitions/background-check/: checkr.toml  publicrecordsnow.toml  truthfinder.toml
broker-definitions/data-aggregator/: acxiom.toml  epsilon.toml
broker-definitions/people-search/: addresses.toml  beenverified.toml  fastpeoplesearch.toml  instantcheckmate.toml  intelius.toml  mylife.toml  neighborwho.toml  nuwber.toml  peekyou.toml  peoplefinders.toml  pipl.toml  radaris.toml  spokeo.toml  truepeoplesearch.toml  ussearch.toml  whitepages.toml  zabasearch.toml
broker-definitions/phone-lookup/: callersmart.toml  truecaller.toml
company-definitions/: README.md
crates/spectral-auth/: Cargo.toml
crates/spectral-auth/src/: lib.rs
crates/spectral-broker/: Cargo.toml
crates/spectral-broker/examples/: diagnose-toml.rs  load-brokers.rs
crates/spectral-broker/src/: definition.rs  error.rs  lib.rs  loader.rs  registry.rs
crates/spectral-broker/src/removal/: captcha.rs  mod.rs  result.rs  web_form.rs
crates/spectral-browser/: Cargo.toml  README.md
crates/spectral-browser/src/: actions.rs  engine.rs  error.rs  fingerprint.rs  lib.rs
crates/spectral-browser/tests/: integration_test.rs
crates/spectral-core/: Cargo.toml
crates/spectral-core/src/: capabilities.rs  config.rs  error.rs  lib.rs  types.rs
crates/spectral-db/: Cargo.toml
crates/spectral-db/migrations/: 001_initial.sql  002_removal_attempts.sql  003_scan_jobs.sql  004_update_removal_attempts_for_findings.sql  005_audit_log.sql  006_removal_evidence.sql  007_email_removals.sql  008_scheduled_jobs.sql  009_discovery_findings.sql  010_settings.sql
crates/spectral-db/src/: broker_scans.rs  connection.rs  discovery_findings.rs  error.rs  findings.rs  lib.rs  migrations.rs  removal_attempts.rs  scan_jobs.rs  settings.rs
crates/spectral-discovery/: Cargo.toml
crates/spectral-discovery/src/: filesystem.rs  lib.rs
crates/spectral-llm/: Cargo.toml
crates/spectral-llm/src/: error.rs  lib.rs  pii_filter.rs  provider.rs  router.rs
crates/spectral-llm/src/providers/: anthropic.rs  common.rs  gemini.rs  lmstudio.rs  mod.rs  ollama.rs  openai.rs
crates/spectral-mail/: Cargo.toml
crates/spectral-mail/src/: imap.rs  lib.rs  sender.rs  templates.rs
crates/spectral-permissions/: Cargo.toml
crates/spectral-permissions/src/: audit.rs  lib.rs  manager.rs  presets.rs  prompts.rs
crates/spectral-privacy/: Cargo.toml
crates/spectral-privacy/src/: engine.rs  error.rs  lib.rs  llm_router.rs  llm_settings.rs  types.rs
crates/spectral-privacy/tests/: integration_test.rs
crates/spectral-scanner/: Cargo.toml
crates/spectral-scanner/src/: error.rs  filter.rs  lib.rs  orchestrator.rs  parser.rs  url_builder.rs
crates/spectral-scanner/tests/: integration_test.rs  orchestrator_findings_test.rs
crates/spectral-scheduler/: Cargo.toml
crates/spectral-vault/: Cargo.toml
crates/spectral-vault/src/: cipher.rs  error.rs  kdf.rs  lib.rs  profile.rs
docs/: DEVELOPMENT_PLAN.md  TOOLING.md  dependency-track-config.md
docs/api/: removal-commands.md
docs/issues/: browser-detection-implementation.md  chromium-dependency-management.md
docs/plans/: 2024-02-10-vault-commands-design.md  2024-02-10-vault-commands-implementation.md  2026-02-10-profile-setup-design.md  2026-02-10-profile-setup-implementation.md  2026-02-10-unlock-screen-ui.md  2026-02-11-browser-automation-engine.md  2026-02-11-form-removal-design.md  2026-02-11-form-removal-implementation.md  2026-02-11-profile-setup-phase2-design.md  2026-02-11-profile-setup-phase2-implementation.md  2026-02-12-manual-scan-trigger-design.md  2026-02-12-manual-scan-trigger-implementation.md  2026-02-13-browser-integration-implementation.md  2026-02-13-phase4-findings-design.md  2026-02-13-phase4-findings-implementation.md  2026-02-13-scan-orchestrator-implementation.md  2026-02-13-scan-ui-design.md  2026-02-13-scan-ui-implementation.md  2026-02-15-phase5-removal-submission-design.md  2026-02-15-phase5-removal-submission-implementation.md  2026-02-16-phase5-frontend-design.md  2026-02-16-phase5-frontend-implementation.md  (+4 more)
scripts/: check-patterns.sh  dependency-track.sh  dev.cjs  dev.ps1  dev.sh  sonar-scan.sh  split-architecture.py  validate-broker-toml.py
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  main.rs  metadata.rs  removal_worker.rs  state.rs
src-tauri/src/commands/: brokers.rs  discovery.rs  llm.rs  mod.rs  privacy.rs  profile.rs  removal.rs  scan.rs  scheduler.rs  settings.rs  vault.rs
src-tauri/src/types/: profile.rs
src-tauri/tests/: findings_workflow_test.rs  removal_batch_test.rs  scan_commands_test.rs  vault_commands.rs
(+73 files in other folders)
