[workspace]
resolver = "2"
members = ["src-tauri", "crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
license = "AGPL-3.0-only"
repository = "https://github.com/spectral-privacy/spectral"
authors = ["Spectral Contributors"]

[workspace.dependencies]
# Tauri
tauri = { version = "2.10.0" }
tauri-build = { version = "2.5.4" }
tauri-plugin-log = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
tokio-util = "0.7"

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Cryptography
chacha20poly1305 = "0.10"
argon2 = "0.5"
rand = "0.8"
zeroize = { version = "1.8", features = ["derive"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# HTTP/Network
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Browser automation
chromiumoxide = { version = "0.7", features = ["tokio-runtime"], default-features = false }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
regex = "1.10"
once_cell = "1.19"
directories = "5.0"
