[package]
name = "spectral-app"
description = "Spectral - Privacy protection through automated data broker removal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "spectral_app"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
tauri.workspace = true
tauri-plugin-log.workspace = true
tauri-plugin-shell.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
chrono.workspace = true

# Internal crates (uncomment as they are created)
spectral-core = { path = "../crates/spectral-core" }
spectral-vault = { path = "../crates/spectral-vault" }
spectral-db = { path = "../crates/spectral-db" }
spectral-broker = { path = "../crates/spectral-broker" }
spectral-scanner = { path = "../crates/spectral-scanner" }
spectral-browser = { path = "../crates/spectral-browser" }
spectral-mail = { path = "../crates/spectral-mail" }
spectral-scheduler = { path = "../crates/spectral-scheduler" }
spectral-discovery = { path = "../crates/spectral-discovery" }
spectral-privacy = { path = "../crates/spectral-privacy" }
# spectral-auth = { path = "../crates/spectral-auth" }
directories.workspace = true
regex.workspace = true
once_cell.workspace = true
sqlx.workspace = true
uuid.workspace = true
hex = "0.4"

[dev-dependencies]
uuid.workspace = true
tempfile.workspace = true
tauri = { workspace = true, features = ["test"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
