[package]
name = "spectral-auth"
description = "App authentication (PIN, biometrics, session management)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
tracing.workspace = true
zeroize.workspace = true
tokio.workspace = true
chrono.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
