[package]
name = "spectral-broker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
# Internal dependencies
spectral-core = { path = "../spectral-core" }
spectral-browser = { path = "../spectral-browser" }

# Async
async-trait = "0.1"

# Error handling
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
toml = { workspace = true }

# Logging
tracing = { workspace = true }

# Time
chrono = { workspace = true }

# Async runtime
tokio = { version = "1.43", features = ["time"] }

[dev-dependencies]
tempfile = "3.0"
tokio = { workspace = true }
