[package]
name = "spectral-browser"
description = "Headless browser automation engine for JavaScript-heavy broker sites"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
chromiumoxide = { version = "0.7", features = ["tokio-runtime"] }
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
rand = "0.8"
async-trait = "0.1"
futures-util = "0.3"
url = "2.5"

[dev-dependencies]
tokio-test = "0.4"
