[package]
name = "spectral-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
# Error handling
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
toml = { workspace = true }

# Logging
tracing = { workspace = true }

# Time
chrono = { workspace = true }

# Utilities
directories = "5.0"
regex = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3.0"
serde_json = { workspace = true }
