[package]
name = "spectral-db"
description = "Database layer for Spectral (SQLite/SQLCipher with migrations)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
sqlx.workspace = true
thiserror.workspace = true
serde.workspace = true
tracing.workspace = true
tokio.workspace = true
chrono.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
