[package]
name = "spectral-db"
description = "Database layer for Spectral (SQLite/SQLCipher with migrations)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
spectral-core = { path = "../spectral-core" }
spectral-broker = { path = "../spectral-broker" }
sqlx.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio.workspace = true
chrono.workspace = true
uuid.workspace = true
zeroize.workspace = true
hex = "0.4"

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
