[package]
name = "spectral-mail"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
sha2 = "0.10"
hex = "0.4"
regex = "1"
thiserror = "1"
tracing = "0.1"
uuid = { workspace = true, features = ["v4"] }
chrono = { workspace = true, features = ["serde"] }
urlencoding = "2"
