[package]
name = "spectral-scanner"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
spectral-core = { path = "../spectral-core" }
spectral-broker = { path = "../spectral-broker" }
spectral-browser = { path = "../spectral-browser" }
spectral-db = { path = "../spectral-db" }
spectral-vault = { path = "../spectral-vault" }

tokio = { version = "1.43", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror.workspace = true
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
async-trait = "0.1"
futures = "0.3"
scraper = "0.22"

[dev-dependencies]
tokio-test = "0.4"
