[package]
name = "spectral-scanner"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
# Workspace crates
spectral-broker = { path = "../spectral-broker" }
spectral-browser = { path = "../spectral-browser" }
spectral-core = { path = "../spectral-core" }
spectral-db = { path = "../spectral-db" }
spectral-vault = { path = "../spectral-vault" }

# Workspace dependencies
anyhow.workspace = true
chrono.workspace = true
futures.workspace = true
scraper = "0.20"
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
urlencoding = "2.1"
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
