[package]
name = "spectral-vault"
description = "PII vault with ChaCha20-Poly1305 encryption and Argon2id key derivation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
spectral-core = { path = "../spectral-core" }
spectral-db = { path = "../spectral-db" }
chacha20poly1305.workspace = true
argon2.workspace = true
rand.workspace = true
zeroize.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["fs"] }
sqlx.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "fs"] }
tempfile.workspace = true
